# ResearchOS

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  README.zh-CN.md  ResearchOS.docx  docker-compose.yml  prompt.txt  pyproject.toml
app/: bootstrap.py  cli.py
artifacts/: live_research_flow_smoke_report.json  mcp_smoke_report.json  mcp_streamable_http_smoke_report.json  production_stack_smoke_report.json  provider_smoke_report.json
configs/: app.yaml  providers.yaml
data/: api_smoke.db  dispatch_smoke.db  dispatch_smoke_2.db  local_flow_test.db  manual_test.db
docs/: github_project_intro.md  iteration_a.md  operator_setup.md  phase1_provider_routing.md  phase2_typed_api_contracts.md  phase3_terminal_control_plane.md  phase4_experiment_manager.md  phase5_auditability_lessons.md  release_checklist.md  role-prompt-skill-architecture.md  website_copy.md
examples/: README.md  minimal-dispatch-profile.ps1  minimal-gap-mapping.ps1  minimal-paper-ingest.ps1
frontend/: index.html  package-lock.json  package.json  rewrite_overview.py
prompts/: analyst.md  archivist.md  branch_manager.md  builder.md  mapper.md  reader.md  reviewer.md  style.md  verifier.md  writer.md
registry/: approvals.jsonl  claims.jsonl  gap_maps.jsonl  lessons.jsonl  paper_cards.jsonl  runs.jsonl  verifications.jsonl
researchos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: bootstrap.py  dev_seed.py  export_figures.py  export_role_assets.py  export_tables.py  run_operator_benchmark.py  run_research_benchmark.py  smoke_mcp.py  (+5 more)
(+280 files in other folders)
