[project]
name = "researchos"
version = "0.0.1"
description = "Code-first multi-agent research workflow system"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "celery>=5.6.2",
    "fastapi>=0.135.1",
    "mcp[cli]>=1.26.0",
    "psycopg[binary]>=3.3.3",
    "pypdf>=6.9.1",
    "pyyaml>=6.0.3",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]

[project.scripts]
researchos = "app.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
